@@ -1,5 +1,5 @@
 <?php
-// $Id: blogapi.test,v 1.4 2008-05-30 07:30:49 dries Exp $
+// $Id: blogapi.test,v 1.5 2008-09-19 20:25:02 dries Exp $
 
 class BlogAPITestCase extends DrupalWebTestCase {
   /**
@@ -117,7 +117,7 @@ class BlogAPITestCase extends DrupalWebTestCase {
     $edit = array();
     $edit['name'] = $vocab;
     $edit['nodes[blog]'] = TRUE;
-    $this->drupalPost('admin/content/taxonomy/add/vocabulary', $edit, t('Save'));
+    $this->drupalPost('admin/content/taxonomy/add', $edit, t('Save'));
     $this->assertRaw(t('Created new vocabulary %vocab.', array('%vocab' => $edit['name'])), t('Taxonomy vocabulary added.'));
 
     $vocab_arr = taxonomy_get_vocabularies();
@@ -146,7 +146,7 @@ class BlogAPITestCase extends DrupalWebTestCase {
   function addTerm($vid, $term) {
     $edit = array();
     $edit['name'] = $term;
-    $this->drupalPost('admin/content/taxonomy/' . $vid . '/add/term', $edit, t('Save'));
+    $this->drupalPost('admin/content/taxonomy/' . $vid . '/add', $edit, t('Save'));
     $this->assertRaw(t('Created new term %term.', array('%term' => $edit['name'])), t('Taxonomy term added.'));
 
     $tree = taxonomy_get_tree($vid);
